# Text-Editor

./: CMakeLists.txt  README.md  test.cpp
include/: SearchAlgorithm.h  globals.h  linkedlist.h  text-editor.h
src/: SearchAlgorithm.cpp  linkedlist.cpp  main.cpp  text-editor.cpp
test/: ans2.txt  ans4.txt  ans5.txt  in1.txt  in4.txt  in5.txt  out1.txt  out3.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
